assets/css/style.css
/* Declaring variables for main color scheme */
:root {
    --orange: rgb(166, 78, 10);
    --black: rgb(20, 16, 13);
    --white: rgb(214, 212, 211);
}

html {
    background-color: var(--black);
    color: var(--orange);
    font-family: Arial, Helvetica, sans-serif;
    letter-spacing: 1px;
    margin: 0;
    text-align: center;
}

header {
    align-items: center;
    background-color: var(--orange);
    display: flex;
    font-size: 20px;
    height: 100px; width: 100%;
    position: fixed;   
    z-index: 1;
}

a {
    color: inherit;
    text-decoration: none;
}

h1 {
    background-color: var(--black);
    color: var(--orange);
    font-size: 36px;
    padding: 5px 80px 5px 20px;
    transition: 0.3s;
}

h1:hover {
    padding-left: 50px;
    transition: 0.5s;
    padding-right: 160px;
} 

nav {
    color: var(--black);
    margin-left: auto;
    padding: 20px;
}

li {
    display: inline;
}

.nav-link {
    font-size: 24px;
    font-weight: bold;
    padding: 20px;
    text-decoration: none;
    transition: 0.3s;
} 

.nav-link:hover {
    color: var(--white);
    transition: 0.3s;
}

section {
    padding-bottom: 50px; 
}

h2 {
    background-color: var(--orange);
    color: var(--black);
    text-align: left;
    width: 300px;
    font-size: 24px;
    padding: 4px 0 4px 20px;
    margin: -18px 0 0 4%;
}

h3 {
    background-color: var(--black);
    color:var(--orange);
    font-size: 20px;;
    text-align: left;
    padding: 5px 0 5px 20px;
    transition: 0.3s;
}

h4 {
    background-color: var(--orange);
    color: var(--black);
    font-size: 16px;;
    text-align: left;
    padding: 5px 20px 3px 20px;
}

p {
    margin: 30px 15% 0 15%;
}

hr {
    border: 1px solid var(--white);
}

figure {
    padding: 120px 0 20px 0;
}

figure img {
    border: 10px solid var(--orange);
    height: 300px; width: 300px;   
}

#my-work-container {
    align-items: center;
    display: flex;
    flex-wrap: wrap;
    gap: 50px;
    justify-content: center;
    margin: 30px 10% 0 10%;
}

#featured-work {
    background-color: var(--orange);
    cursor: pointer;
    height: 450px; width: 80%; 
    max-width: 900px;
    overflow: hidden;
}

#featured-work img {
    height: 100%; width: 100%; 
    object-fit: cover;
    position: relative;
    transition: 1s;
}

#featured-work:hover img {
    transform: scale(1.07);
    transition: 5s;
}

#featured-work div {
    align-items: center;
    background-color: var(--orange);
    display: flex;
    width: 100%;
    height: 50px;
    margin-top: -450px;
    position: relative;
}

#featured-work h3 {
    width: 400px;
}

#featured-work:hover h3 {
    color: var(--white);
    padding-left: 50px;
    transition: 0.5s;
    width: 480px;
}

#featured-work h4 {
    position: absolute;
    margin-top: 825px;
}

#flex-break {
    flex-basis: 100%;
    height: 0;
}

.work {
    background-color: var(--orange);
    cursor: pointer;
    height: 400px; width: 400px; 
    max-width: 900px;
    overflow: hidden;
}

.work img {
    height: 100%; width: 100%; 
    object-fit: cover;
    position: relative;
    transition: 1s;
}

.work:hover img {
    transform: scale(1.1);
    transition: 5s;
}

.work div {
    align-items: center;
    background-color: var(--orange);
    display: flex;
    width: 100%;
    height: 50px;
    margin-top: -400px;
    position: relative;
}

.work h3 {
    padding-right: 40px;
}

.work:hover h3 {
    color: var(--white);
    padding: 5 90px 5 40px;
    transition: 0.5s;

}

.work h4 {
    position: absolute;
    margin-top: 725px;
}

